src/libs/pgg/parser_gen/PggParser.cpp

#include "src/ast.h"
#include "src/compositor.h"


// Generated from /home/neuro/sources/neverwhere/src/libs/pgg/grammar/Pgg.g4 by ANTLR 4.13.2



#include "PggParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct PggParserStaticData final {
  PggParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  PggParserStaticData(const PggParserStaticData&) = delete;
  PggParserStaticData(PggParserStaticData&&) = delete;
  PggParserStaticData& operator=(const PggParserStaticData&) = delete;
  PggParserStaticData& operator=(PggParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag pggParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<PggParserStaticData> pggParserStaticData = nullptr;

void pggParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (pggParserStaticData != nullptr) {
    return;
  }
#else
  assert(pggParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<PggParserStaticData>(
    std::vector<std::string>{
      "file", "import_stmt", "param_stmt", "output_stmt", "def_stmt", "params", 
      "param", "outputs", "out_decl", "expect_stmt", "ensure_stmt", "stmt", 
      "binding", "targets", "tap_stmt", "path", "repeat_zone", "foreach_zone", 
      "aexpr", "ternary", "or_expr", "and_expr", "cmp_expr", "add_expr", 
      "mul_expr", "unary", "postfix", "call", "qualified_name", "arg", "primary", 
      "attr_ref", "vec_literal", "list_literal", "literal", "type"
    },
    std::vector<std::string>{
      "", "'def'", "'expect'", "'ensure'", "'tap'", "'import'", "'as'", 
      "'repeat'", "'foreach'", "'in'", "'param'", "'output'", "'none'", 
      "'true'", "'false'", "", "", "", "'->'", "'<='", "'>='", "'=='", "'!='", 
      "'<'", "'>'", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'|'", "'&'", 
      "'@'", "'\\u003F'", "':'", "'.'", "','", "'='", "'('", "')'", "'{'", 
      "'}'", "'['", "']'"
    },
    std::vector<std::string>{
      "", "DEF", "EXPECT", "ENSURE", "TAP", "IMPORT", "AS", "REPEAT", "FOREACH", 
      "IN", "PARAM", "OUTPUT", "NONE", "TRUE", "FALSE", "TRIPLE_STRING", 
      "STRING", "NUMBER", "ARROW", "LTE", "GTE", "EQ", "NEQ", "LT", "GT", 
      "PLUS", "MINUS", "STAR", "SLASH", "PERCENT", "BANG", "PIPE", "AMP", 
      "AT", "QUESTION", "COLON", "DOT", "COMMA", "ASSIGN", "LPAREN", "RPAREN", 
      "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "IDENT", "NEWLINE", "COMMENT", 
      "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  pggParserStaticData = std::move(staticData);
}

}

PggParser::PggParser(TokenStream *input) : PggParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

PggParser::PggParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  PggParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *pggParserStaticData->atn, pggParserStaticData->decisionToDFA, pggParserStaticData->sharedContextCache, options);
}

PggParser::~PggParser() {
  delete _interpreter;
}

const atn::ATN& PggParser::getATN() const {
  return *pggParserStaticData->atn;
}

std::string PggParser::getGrammarFileName() const {
  return "Pgg.g4";
}

const std::vector<std::string>& PggParser::getRuleNames() const {
  return pggParserStaticData->ruleNames;
}

const dfa::Vocabulary& PggParser::getVocabulary() const {
  return pggParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView PggParser::getSerializedATN() const {
  return pggParserStaticData->serializedATN;
}


//----------------- FileContext ------------------------------------------------------------------

PggParser::FileContext::FileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PggParser::FileContext::EOF() {
  return getToken(PggParser::EOF, 0);
}

std::vector<tree::TerminalNode *> PggParser::FileContext::NEWLINE() {
  return getTokens(PggParser::NEWLINE);
}

tree::TerminalNode* PggParser::FileContext::NEWLINE(size_t i) {
  return getToken(PggParser::NEWLINE, i);
}

std::vector<PggParser::Import_stmtContext *> PggParser::FileContext::import_stmt() {
  return getRuleContexts<PggParser::Import_stmtContext>();
}

PggParser::Import_stmtContext* PggParser::FileContext::import_stmt(size_t i) {
  return getRuleContext<PggParser::Import_stmtContext>(i);
}

std::vector<PggParser::Param_stmtContext *> PggParser::FileContext::param_stmt() {
  return getRuleContexts<PggParser::Param_stmtContext>();
}

PggParser::Param_stmtContext* PggParser::FileContext::param_stmt(size_t i) {
  return getRuleContext<PggParser::Param_stmtContext>(i);
}

std::vector<PggParser::Def_stmtContext *> PggParser::FileContext::def_stmt() {
  return getRuleContexts<PggParser::Def_stmtContext>();
}

PggParser::Def_stmtContext* PggParser::FileContext::def_stmt(size_t i) {
  return getRuleContext<PggParser::Def_stmtContext>(i);
}

std::vector<PggParser::Output_stmtContext *> PggParser::FileContext::output_stmt() {
  return getRuleContexts<PggParser::Output_stmtContext>();
}

PggParser::Output_stmtContext* PggParser::FileContext::output_stmt(size_t i) {
  return getRuleContext<PggParser::Output_stmtContext>(i);
}

std::vector<PggParser::StmtContext *> PggParser::FileContext::stmt() {
  return getRuleContexts<PggParser::StmtContext>();
}

PggParser::StmtContext* PggParser::FileContext::stmt(size_t i) {
  return getRuleContext<PggParser::StmtContext>(i);
}


size_t PggParser::FileContext::getRuleIndex() const {
  return PggParser::RuleFile;
}


PggParser::FileContext* PggParser::file() {
  FileContext *_localctx = _tracker.createInstance<FileContext>(_ctx, getState());
  enterRule(_localctx, 0, PggParser::RuleFile);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
     gc->beginFile(); 
    setState(91);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 105553116269618) != 0)) {
      setState(89);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case PggParser::NEWLINE: {
          setState(73);
          match(PggParser::NEWLINE);
          break;
        }

        case PggParser::IMPORT: {
          setState(74);
          antlrcpp::downCast<FileContext *>(_localctx)->i = import_stmt();
           gc->addNode(antlrcpp::downCast<FileContext *>(_localctx)->i->result); 
          break;
        }

        case PggParser::PARAM: {
          setState(77);
          antlrcpp::downCast<FileContext *>(_localctx)->p = param_stmt();
           gc->addNode(antlrcpp::downCast<FileContext *>(_localctx)->p->result); 
          break;
        }

        case PggParser::DEF: {
          setState(80);
          antlrcpp::downCast<FileContext *>(_localctx)->d = def_stmt();
           gc->addNode(antlrcpp::downCast<FileContext *>(_localctx)->d->result); 
          break;
        }

        case PggParser::OUTPUT: {
          setState(83);
          antlrcpp::downCast<FileContext *>(_localctx)->o = output_stmt();
           gc->addNode(antlrcpp::downCast<FileContext *>(_localctx)->o->result); 
          break;
        }

        case PggParser::TAP:
        case PggParser::IDENT: {
          setState(86);
          antlrcpp::downCast<FileContext *>(_localctx)->s = stmt();
           gc->addNode(antlrcpp::downCast<FileContext *>(_localctx)->s->result); 
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(93);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(94);
    match(PggParser::EOF);
     antlrcpp::downCast<FileContext *>(_localctx)->result =  gc->endFile(spanOf(_localctx)); 
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Import_stmtContext ------------------------------------------------------------------

PggParser::Import_stmtContext::Import_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PggParser::Import_stmtContext::IMPORT() {
  return getToken(PggParser::IMPORT, 0);
}

tree::TerminalNode* PggParser::Import_stmtContext::NEWLINE() {
  return getToken(PggParser::NEWLINE, 0);
}

PggParser::Qualified_nameContext* PggParser::Import_stmtContext::qualified_name() {
  return getRuleContext<PggParser::Qualified_nameContext>(0);
}

tree::TerminalNode* PggParser::Import_stmtContext::AS() {
  return getToken(PggParser::AS, 0);
}

tree::TerminalNode* PggParser::Import_stmtContext::AT() {
  return getToken(PggParser::AT, 0);
}

tree::TerminalNode* PggParser::Import_stmtContext::IDENT() {
  return getToken(PggParser::IDENT, 0);
}

tree::TerminalNode* PggParser::Import_stmtContext::NUMBER() {
  return getToken(PggParser::NUMBER, 0);
}


size_t PggParser::Import_stmtContext::getRuleIndex() const {
  return PggParser::RuleImport_stmt;
}


PggParser::Import_stmtContext* PggParser::import_stmt() {
  Import_stmtContext *_localctx = _tracker.createInstance<Import_stmtContext>(_ctx, getState());
  enterRule(_localctx, 2, PggParser::RuleImport_stmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(97);
    match(PggParser::IMPORT);
    setState(98);
    antlrcpp::downCast<Import_stmtContext *>(_localctx)->q = qualified_name();
    setState(101);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PggParser::AS) {
      setState(99);
      match(PggParser::AS);
      setState(100);
      antlrcpp::downCast<Import_stmtContext *>(_localctx)->a = match(PggParser::IDENT);
    }
    setState(105);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PggParser::AT) {
      setState(103);
      match(PggParser::AT);
      setState(104);
      antlrcpp::downCast<Import_stmtContext *>(_localctx)->v = match(PggParser::NUMBER);
    }
    setState(107);
    match(PggParser::NEWLINE);
     antlrcpp::downCast<Import_stmtContext *>(_localctx)->result =  gc->newImport(antlrcpp::downCast<Import_stmtContext *>(_localctx)->q->result, antlrcpp::downCast<Import_stmtContext *>(_localctx)->a, antlrcpp::downCast<Import_stmtContext *>(_localctx)->v, spanOf(_localctx)); 
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Param_stmtContext ------------------------------------------------------------------

PggParser::Param_stmtContext::Param_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PggParser::Param_stmtContext::PARAM() {
  return getToken(PggParser::PARAM, 0);
}

tree::TerminalNode* PggParser::Param_stmtContext::COLON() {
  return getToken(PggParser::COLON, 0);
}

tree::TerminalNode* PggParser::Param_stmtContext::NEWLINE() {
  return getToken(PggParser::NEWLINE, 0);
}

tree::TerminalNode* PggParser::Param_stmtContext::IDENT() {
  return getToken(PggParser::IDENT, 0);
}

PggParser::TypeContext* PggParser::Param_stmtContext::type() {
  return getRuleContext<PggParser::TypeContext>(0);
}

tree::TerminalNode* PggParser::Param_stmtContext::ASSIGN() {
  return getToken(PggParser::ASSIGN, 0);
}

PggParser::LiteralContext* PggParser::Param_stmtContext::literal() {
  return getRuleContext<PggParser::LiteralContext>(0);
}


size_t PggParser::Param_stmtContext::getRuleIndex() const {
  return PggParser::RuleParam_stmt;
}


PggParser::Param_stmtContext* PggParser::param_stmt() {
  Param_stmtContext *_localctx = _tracker.createInstance<Param_stmtContext>(_ctx, getState());
  enterRule(_localctx, 4, PggParser::RuleParam_stmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(110);
    match(PggParser::PARAM);
    setState(111);
    antlrcpp::downCast<Param_stmtContext *>(_localctx)->n = match(PggParser::IDENT);
    setState(112);
    match(PggParser::COLON);
    setState(113);
    antlrcpp::downCast<Param_stmtContext *>(_localctx)->t = type(0);
    setState(118);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PggParser::ASSIGN) {
      setState(114);
      match(PggParser::ASSIGN);
      setState(115);
      antlrcpp::downCast<Param_stmtContext *>(_localctx)->d = literal();
       antlrcpp::downCast<Param_stmtContext *>(_localctx)->def =  antlrcpp::downCast<Param_stmtContext *>(_localctx)->d->result; antlrcpp::downCast<Param_stmtContext *>(_localctx)->hasDef =  true; 
    }
    setState(120);
    match(PggParser::NEWLINE);
     antlrcpp::downCast<Param_stmtContext *>(_localctx)->result =  gc->newParam((antlrcpp::downCast<Param_stmtContext *>(_localctx)->n != nullptr ? antlrcpp::downCast<Param_stmtContext *>(_localctx)->n->getText() : ""), spanTok(antlrcpp::downCast<Param_stmtContext *>(_localctx)->n), antlrcpp::downCast<Param_stmtContext *>(_localctx)->t->result, _localctx->def, _localctx->hasDef, spanOf(_localctx)); 
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Output_stmtContext ------------------------------------------------------------------

PggParser::Output_stmtContext::Output_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PggParser::Output_stmtContext::OUTPUT() {
  return getToken(PggParser::OUTPUT, 0);
}

tree::TerminalNode* PggParser::Output_stmtContext::NEWLINE() {
  return getToken(PggParser::NEWLINE, 0);
}

tree::TerminalNode* PggParser::Output_stmtContext::IDENT() {
  return getToken(PggParser::IDENT, 0);
}


size_t PggParser::Output_stmtContext::getRuleIndex() const {
  return PggParser::RuleOutput_stmt;
}


PggParser::Output_stmtContext* PggParser::output_stmt() {
  Output_stmtContext *_localctx = _tracker.createInstance<Output_stmtContext>(_ctx, getState());
  enterRule(_localctx, 6, PggParser::RuleOutput_stmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(123);
    match(PggParser::OUTPUT);
    setState(124);
    antlrcpp::downCast<Output_stmtContext *>(_localctx)->n = match(PggParser::IDENT);
    setState(125);
    match(PggParser::NEWLINE);
     antlrcpp::downCast<Output_stmtContext *>(_localctx)->result =  gc->newOutput((antlrcpp::downCast<Output_stmtContext *>(_localctx)->n != nullptr ? antlrcpp::downCast<Output_stmtContext *>(_localctx)->n->getText() : ""), spanTok(antlrcpp::downCast<Output_stmtContext *>(_localctx)->n), spanOf(_localctx)); 
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Def_stmtContext ------------------------------------------------------------------

PggParser::Def_stmtContext::Def_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PggParser::Def_stmtContext::DEF() {
  return getToken(PggParser::DEF, 0);
}

std::vector<tree::TerminalNode *> PggParser::Def_stmtContext::LPAREN() {
  return getTokens(PggParser::LPAREN);
}

tree::TerminalNode* PggParser::Def_stmtContext::LPAREN(size_t i) {
  return getToken(PggParser::LPAREN, i);
}

std::vector<tree::TerminalNode *> PggParser::Def_stmtContext::RPAREN() {
  return getTokens(PggParser::RPAREN);
}

tree::TerminalNode* PggParser::Def_stmtContext::RPAREN(size_t i) {
  return getToken(PggParser::RPAREN, i);
}
